# Sinope

./: .gitignore  Cargo.toml
apple/: IDENTITY  LOG  OPTIONS-000005
bitch/: IDENTITY  LOG  LOG.old.1585496675353127  OPTIONS-000008
junk/: IDENTITY  LOG  OPTIONS-000005
src/: block.rs  blockchain.rs  lib.rs  main.rs  proof.rs  transcation.rs  utils.rs
