[package]
name = "Sinope"
version = "0.1.0"
authors = ["professor <friedrichdoku@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.2"
sha2 = "0.8.1"
num = "0.2.1"
bincode = "1.0"
serde = { version = "1.0", features = ["derive"] }
rocksdb = "0.13.0"